# Trade-log

./: .gitignore.txt  CMakeLists.txt
include/: User.h
src/: UserIMP.cpp  accountDetails.txt  main.cpp
